--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-    "resolution": "1280*720",
-    "file-size": "400M",
+    "duration": "300",
     "save-location": "./video",
     "codec": "h265"
 }
