--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,4 @@ find_library(AVDEVICE_LIBRARY avdevice)
 
 add_executable(homecam src/main.cpp)
 target_link_libraries(homecam ${OpenCV_LIBS} ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${AVDEVICE_LIBRARY})
-include_directories(homecam ./include ${OpenCV_INCLUDE_DIRS} ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${AVDEVICE_INCLUDE_DIR})
+include_directories(homecam ./include ./3rd-party ${OpenCV_INCLUDE_DIRS} ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${AVDEVICE_INCLUDE_DIR})
