--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "codec": "H264",
-    "duration": 300,
-    "save-location": "./video/"
+  "codec": "H264",
+  "duration": 300,
+  "save-location": "video",
+  "camera-id": 1
 }
