--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,19 +34,8 @@ message(STATUS "Project           : ${PROJECT_NAME}")
 message(STATUS "Project directory : ${PROJECT_SOURCE_DIR}")
 
 find_package(OpenCV REQUIRED)
-
-find_path(AVCODEC_INCLUDE_DIR libavcodec/avcodec.h)
-find_library(AVCODEC_LIBRARY avcodec)
-
-find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h)
-find_library(AVFORMAT_LIBRARY avformat)
-
-find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h)
-find_library(AVUTIL_LIBRARY avutil)
-
-find_path(AVDEVICE_INCLUDE_DIR libavdevice/avdevice.h)
-find_library(AVDEVICE_LIBRARY avdevice)
+find_package(Threads REQUIRED)
 
 add_executable(homecam src/main.cpp)
-target_link_libraries(homecam ${OpenCV_LIBS} ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${AVDEVICE_LIBRARY})
-include_directories(homecam ./include ./3rd-party ${OpenCV_INCLUDE_DIRS} ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${AVDEVICE_INCLUDE_DIR})
+target_link_libraries(homecam Threads::Threads ${OpenCV_LIBS})
+include_directories(homecam ./include ./3rd-party ${OPENCV_INCLUDE_DIRS})
