--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ message(STATUS "Project Directory : ${PROJECT_SOURCE_DIR}")
 
 add_executable(homecam src/main.cpp)
 find_package(OpenCV REQUIRED)
-if (Linux)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     find_package(Threads REQUIRED)
     target_link_libraries(homecam Threads::Threads)
 endif ()
