--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ project(homecam)
 ENABLE_LANGUAGE(CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-#set warning level: enable all warning
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
 
 #disable MSVC language extensions
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
