--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "duration": 60,
   "save-location": "video",
   "camera-id": 0,
+  "resolution": "1280x720",
   "text-pos": 3,
   "font-height": 30,
   "web-port": 8080,
