--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,5 +32,10 @@ find_package(TBB REQUIRED)
 target_link_libraries(homecam ${OpenCV_LIBS} ${OPENSSL_LIBRARIES} TBB::tbb)
 include_directories(homecam ./include ./3rd-party ${OPENCV_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR} ${TBB_INCLUDE_DIR} 3rd-party/raspberrypi 3rd-party/ilclient)
 find_library(ILCLIENT_LIBRARY ilclient HINTS 3rd-party/ilclient)
-link_directories(/opt/vc/lib)
-target_link_libraries(homecam ${ILCLIENT_LIBRARY} bcm_host vchiq_arm vcilcs vcos vcsm)
+find_library(BCM_HOST_LIBRARY bcm_host HINTS /opt/vc/lib)
+find_library(VCHIQ_ARM_LIBRARY vchiq_arm HINTS /opt/vc/lib)
+find_library(VCHOSTIF_LIBRARY vchostif HINTS /opt/vc/lib)
+find_library(VCILCS_LIBRARY vcilcs HINTS /opt/vc/lib)
+find_library(VCOS_LIBRARY vcos HINTS /opt/vc/lib)
+find_library(VCSM_LIBRARY vcsm HINTS /opt/vc/lib)
+target_link_libraries(homecam ${ILCLIENT_LIBRARY} BCM_HOST_LIBRARY VCHIQ_ARM_LIBRARY VCHOSTIF_LIBRARY VCILCS_LIBRARY VCOS_LIBRARY VCSM_LIBRARY)
