--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,4 +38,4 @@ find_library(VCHOSTIF_LIBRARY vchostif HINTS /opt/vc/lib)
 find_library(VCILCS_LIBRARY vcilcs HINTS /opt/vc/lib)
 find_library(VCOS_LIBRARY vcos HINTS /opt/vc/lib)
 find_library(VCSM_LIBRARY vcsm HINTS /opt/vc/lib)
-target_link_libraries(homecam ${ILCLIENT_LIBRARY} BCM_HOST_LIBRARY VCHIQ_ARM_LIBRARY VCHOSTIF_LIBRARY VCILCS_LIBRARY VCOS_LIBRARY VCSM_LIBRARY)
+target_link_libraries(homecam ${ILCLIENT_LIBRARY} ${BCM_HOST_LIBRARY} ${VCHIQ_ARM_LIBRARY} ${VCHOSTIF_LIBRARY} ${VCILCS_LIBRARY} ${VCOS_LIBRARY} ${VCSM_LIBRARY})
