--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,34 +17,55 @@ message(STATUS "System            : ${CMAKE_SYSTEM_NAME}")
 message(STATUS "Project           : ${PROJECT_NAME}")
 message(STATUS "Project Directory : ${PROJECT_SOURCE_DIR}")
 
-
-file(GLOB SRCS "src/*.cpp" "src/*.c")
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    file(GLOB SRCS "src/*.cpp" "src/*.c" "src/linux/*.cpp" "src/linux/*.c")
+else ()
+    file(GLOB SRCS "src/*.cpp" "src/*.c")
+endif ()
 message(STATUS "Source Files : ${SRCS}")
 add_executable(homecam ${SRCS})
 
-
-find_package(OpenCV REQUIRED)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     find_package(Threads REQUIRED)
     target_link_libraries(homecam Threads::Threads)
 endif ()
+
+find_package(OpenCV REQUIRED)
+include_directories(homecam ${OPENCV_INCLUDE_DIRS})
+target_link_libraries(homecam ${OpenCV_LIBS})
 find_package(OpenSSL REQUIRED)
+target_link_libraries(homecam ${OPENSSL_LIBRARIES})
+include_directories(homecam ${OPENSSL_INCLUDE_DIR})
+
 
 #add_subdirectory(3rd-party/oneTBB)
 #find_package(TBB REQUIRED PATHS 3rd-party/oneTBB)
 find_package(TBB REQUIRED)
+target_link_libraries(homecam TBB::tbb)
+include_directories(homecam ${TBB_INCLUDE_DIR})
 
-find_library(TURBOJPEG_LIBRARY turbojpeg HINTS /opt/libjpeg-turbo/lib32/)
-target_link_libraries(homecam ${TURBOJPEG_LIBRARY})
-message(STATUS "TURBOJPEG_LIBRARY : ${TURBOJPEG_LIBRARY}")
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    find_library(TURBOJPEG_LIBRARY turbojpeg HINTS 3rd-party/libjpeg-turbo/build)
+    target_link_libraries(homecam ${TURBOJPEG_LIBRARY})
+    include_directories(homecam 3rd-party/libjpeg-turbo)
+else ()
+    #FIXME 这里不要写死
+    find_library(TURBOJPEG_LIBRARY turbojpeg HINTS /opt/libjpeg-turbo/lib32/)
+    target_link_libraries(homecam ${TURBOJPEG_LIBRARY})
+    include_directories(homecam /opt/libjpeg-turbo/include/)
+endif ()
 
-target_link_libraries(homecam ${OpenCV_LIBS} ${OPENSSL_LIBRARIES} TBB::tbb)
-include_directories(homecam ./include ./3rd-party ${OPENCV_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR} ${TBB_INCLUDE_DIR} 3rd-party/raspberrypi 3rd-party/ilclient /opt/libjpeg-turbo/include/)
-find_library(ILCLIENT_LIBRARY ilclient HINTS 3rd-party/ilclient)
-find_library(BCM_HOST_LIBRARY bcm_host HINTS /opt/vc/lib)
-find_library(VCHIQ_ARM_LIBRARY vchiq_arm HINTS /opt/vc/lib)
-find_library(VCHOSTIF_LIBRARY vchostif HINTS /opt/vc/lib)
-find_library(VCILCS_LIBRARY vcilcs HINTS /opt/vc/lib)
-find_library(VCOS_LIBRARY vcos HINTS /opt/vc/lib)
-find_library(VCSM_LIBRARY vcsm HINTS /opt/vc/lib)
-target_link_libraries(homecam ${ILCLIENT_LIBRARY} ${BCM_HOST_LIBRARY} ${VCHIQ_ARM_LIBRARY} ${VCHOSTIF_LIBRARY} ${VCILCS_LIBRARY} ${VCOS_LIBRARY} ${VCSM_LIBRARY})
+include_directories(homecam ./include ./3rd-party)
+
+#FIXME 这里实际上要判断是否是raspi
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    include_directories(homecam 3rd-party/raspberrypi 3rd-party/ilclient)
+    find_library(ILCLIENT_LIBRARY ilclient HINTS 3rd-party/ilclient)
+    find_library(BCM_HOST_LIBRARY bcm_host HINTS /opt/vc/lib)
+    find_library(VCHIQ_ARM_LIBRARY vchiq_arm HINTS /opt/vc/lib)
+    find_library(VCHOSTIF_LIBRARY vchostif HINTS /opt/vc/lib)
+    find_library(VCILCS_LIBRARY vcilcs HINTS /opt/vc/lib)
+    find_library(VCOS_LIBRARY vcos HINTS /opt/vc/lib)
+    find_library(VCSM_LIBRARY vcsm HINTS /opt/vc/lib)
+    target_link_libraries(homecam ${ILCLIENT_LIBRARY} ${BCM_HOST_LIBRARY} ${VCHIQ_ARM_LIBRARY} ${VCHOSTIF_LIBRARY} ${VCILCS_LIBRARY} ${VCOS_LIBRARY} ${VCSM_LIBRARY})
+endif ()
