cmake find openssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ endif ()
 find_package(OpenCV REQUIRED HINTS 3rd-party/opencv/install)
 include_directories(homecam ${OPENCV_INCLUDE_DIRS})
 target_link_libraries(homecam ${OpenCV_LIBS})
+set(OPENSSL_ROOT_DIR 3rd-party/openssl/sslinstall)
 find_package(OpenSSL REQUIRED)
 target_link_libraries(homecam ${OPENSSL_LIBRARIES})
 include_directories(homecam ${OPENSSL_INCLUDE_DIR})
