--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-  "log-level": 1,
+  "log-level": 0,
   "disable-log-module": [
   ],
   "video-thread-count": 4,
   "web-thread-count": 2,
   "camera-pixel-format": "MJPG",
   "output-codec": "H264",
-  "duration": 60,
-  "save-location": "videotest",
+  "duration": 1800,
+  "save-location": "video",
+  "device": "/dev/video0",
   "max-storage": 1,
-  "device": "",
   "resolution": "1280x720",
   "fps": 30,
   "timestamp-pos": 3,
