差不多完成了多进程，现在还差直播那里改成IPC，以及发现进程死掉了重开

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ cmake-build-release
 3rd-party/libjpeg-turbo/install
 video/*.jpg
 video/*.json
+3rd-party/opencv/CMakeCache.txt
+3rd-party/opencv/CMakeFiles/cmake.check_cache
